--- a/android-start/app/src/main/res/menu/main_menu.xml
+++ b/android-start/app/src/main/res/menu/main_menu.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <!--<item-->
+        <!--android:id="@+id/fresh_config_menu"-->
+        <!--android:title="@string/fresh_config"-->
+        <!--app:showAsAction="never"/>-->
+    <!--<item-->
+        <!--android:id="@+id/invite_menu"-->
+        <!--android:title="@string/invite_menu_label"-->
+        <!--app:showAsAction="never"/>-->
+    <!--<item-->
+        <!--android:id="@+id/crash_menu"-->
+        <!--android:title="@string/cause_crash"/>-->
+
+    <!--<item-->
+        <!--android:id="@+id/splash_menu"-->
+        <!--android:title="@string/splash_screen"/>-->
+
+    <item
+        android:id="@+id/work_menu"
+        android:title="@string/work_screen"/>
+
+    <item
+        android:id="@+id/chat_menu"
+        android:title="@string/chat_screen"/>
+
     <item
         android:id="@+id/sign_out_menu"
         android:title="@string/sign_out"
         app:showAsAction="never"/>
-    <item
-        android:id="@+id/fresh_config_menu"
-        android:title="@string/fresh_config"
-        app:showAsAction="never"/>
-    <item
-        android:id="@+id/invite_menu"
-        android:title="@string/invite_menu_label"
-        app:showAsAction="never"/>
-    <item
-        android:id="@+id/crash_menu"
-        android:title="@string/cause_crash"/>
+
 </menu>
