bill summary screen added

--- a/android-start/app/src/main/res/menu/main_menu.xml
+++ b/android-start/app/src/main/res/menu/main_menu.xml
@@ -23,6 +23,10 @@
         android:title="@string/work_screen"/>
 
     <item
+        android:id="@+id/bill_menu"
+        android:title="Bill"/>
+
+    <item
         android:id="@+id/chat_menu"
         android:title="@string/chat_screen"/>
 
