--- a/android-start/app/src/main/res/menu/main_menu.xml
+++ b/android-start/app/src/main/res/menu/main_menu.xml
@@ -19,6 +19,14 @@
         <!--android:title="@string/splash_screen"/>-->
 
     <item
+        android:id="@+id/about_menu"
+        android:title="About" />
+
+    <item
+        android:id="@+id/messages"
+        android:title="Messages" />
+
+    <item
         android:id="@+id/work_menu"
         android:title="@string/work_screen"/>
 
@@ -29,6 +37,10 @@
     <item
         android:id="@+id/chat_menu"
         android:title="@string/chat_screen"/>
+
+    <item
+        android:id="@+id/sign_in_menu"
+        android:title="Sign in"/>
 
     <item
         android:id="@+id/sign_out_menu"
