--- a/android-start/app/src/main/res/layout/activity_sign_in.xml
+++ b/android-start/app/src/main/res/layout/activity_sign_in.xml
@@ -7,13 +7,14 @@
              android:orientation="vertical">
 
     <TextView
+        android:id="@+id/signinText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
-        android:text="@string/sign_in"/>
+        android:text="@string/sign_in"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
@@ -22,5 +23,13 @@
         android:layout_centerInParent="true"
         android:visibility="visible"
         android:layout_gravity="center"/>
+
+    <EditText
+        android:id="@+id/usernameText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:singleLine="false" />
 
 </FrameLayout>
