--- a/android-start/app/src/main/res/menu/main_menu.xml
+++ b/android-start/app/src/main/res/menu/main_menu.xml
@@ -42,9 +42,9 @@
         android:id="@+id/sign_in_menu"
         android:title="Sign in"/>
 
-    <item
-        android:id="@+id/sign_out_menu"
-        android:title="@string/sign_out"
-        app:showAsAction="never"/>
+    <!--<item-->
+        <!--android:id="@+id/sign_out_menu"-->
+        <!--android:title="@string/sign_out"-->
+        <!--app:showAsAction="never"/>-->
 
 </menu>
