--- a/android-start/app/src/main/res/layout/activity_sign_in.xml
+++ b/android-start/app/src/main/res/layout/activity_sign_in.xml
@@ -12,8 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
-        android:text="@string/sign_in"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <com.google.android.gms.common.SignInButton
@@ -30,6 +29,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
+        android:layout_marginTop="180dp"
         android:singleLine="false" />
 
 </FrameLayout>
