--- a/android-start/app/src/main/res/layout/messages.xml
+++ b/android-start/app/src/main/res/layout/messages.xml
@@ -25,5 +25,8 @@
         android:layout_centerVertical="true"
         android:layout_marginStart="25dp"
         android:ems="10"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine"
+        android:textIsSelectable="false"
+        android:singleLine="false"
+        android:textSize="10sp" />
 </RelativeLayout>
