--- a/android-start/app/src/main/res/layout/about.xml
+++ b/android-start/app/src/main/res/layout/about.xml
@@ -172,9 +172,18 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"
         android:layout_below="@+id/linearLayout3.1"
         android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/deviceDetailsTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Device Details"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -186,6 +195,13 @@
         android:layout_alignParentStart="true"
         android:orientation="horizontal">
 
+        <EditText
+            android:id="@+id/deviceDetailsValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -196,7 +212,6 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/linearLayout4.1"
         android:orientation="horizontal">
-
     </LinearLayout>
 
     <LinearLayout
