--- a/android-start/app/src/main/res/layout/about.xml
+++ b/android-start/app/src/main/res/layout/about.xml
@@ -181,7 +181,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Device Details"
+            android:text="Version"
             android:textSize="20sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -195,11 +195,12 @@
         android:layout_alignParentStart="true"
         android:orientation="horizontal">
 
-        <EditText
+        <TextView
             android:id="@+id/deviceDetailsValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="1.0"
             android:textSize="20sp"
             android:textStyle="bold" />
     </LinearLayout>
