--- a/android-start/app/src/main/res/layout/activity_sign_in.xml
+++ b/android-start/app/src/main/res/layout/activity_sign_in.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:id="@+id/sign_in_layout"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/sign_in_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
@@ -31,5 +32,15 @@
         android:inputType="textPersonName"
         android:layout_marginTop="180dp"
         android:singleLine="false" />
+
+    <!--<Button-->
+        <!--android:id="@+id/sign_in_button"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:background="@color/colorPrimaryDark"-->
+        <!--android:elevation="0dp"-->
+        <!--android:text="Sign in" />-->
 
 </FrameLayout>
