--- a/android-start/app/src/main/res/layout/bill_main.xml
+++ b/android-start/app/src/main/res/layout/bill_main.xml
@@ -140,14 +140,13 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/jobTypeTextText"
+            android:id="@+id/overdueNoticeText"
             android:layout_width="match_parent"
             android:layout_height="37dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="15dp"
             android:layout_weight="1"
-            android:text="$100.05 Overdue - please pay now"
             android:textAllCaps="false"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="12sp"
@@ -237,7 +236,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginBottom="15dp"
             android:layout_weight="1"
-            android:text="28 FEB 2018"
+            android:text="30 JUN 2018"
             android:textAllCaps="false"
             android:textSize="18sp"
             android:textStyle="normal" />
@@ -311,7 +310,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView"
-        android:text="12 FEB 2018" />
+        android:text="12 JUN 2018" />
 
     <TextView
         android:id="@+id/textView5"
